// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Checkbox Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r4:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:r4:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r5:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r18:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           aria-describedby="testID"
           value
    >
    <label for="checkboxInputId-:r18:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r19:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  dummyClassname"
       lang="nb"
  >
    <input id="htmlid"
           class="Checkbox_input__fDeJ7"
           data-testid="123ID"
           type="checkbox"
           value
    >
    <label for="htmlid"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r3:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithChecked play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:ri:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
           checked
    >
    <label for="checkboxInputId-:ri:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rj:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithCheckedAndRequired play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r16:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
           checked
    >
    <label for="checkboxInputId-:r16:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r17:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDefaultChecked play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r1c:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
           checked
    >
    <label for="checkboxInputId-:r1c:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1d:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r6:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:r6:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
        <span class="Checkbox_labelContentDescription__242y4">
          En beskrivelse av punktet
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r7:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDescriptionAndDisabled smoke-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:ra:"
           class="Checkbox_input__fDeJ7"
           disabled
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:ra:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
        <span class="Checkbox_labelContentDescription__242y4">
          En beskrivelse av punktet
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rb:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDescriptionAndLongText smoke-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r8:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:r8:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Får ekstra lang reisevei til jobb på grunn av levering til barnehage eller skolefritidsordning eller annen fritidsordning
        </span>
        <span class="Checkbox_labelContentDescription__242y4">
          Litt rart å ha en beskrivende tekst rett under en lang tekst, men sånn har det blitt
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r9:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:rk:"
           class="Checkbox_input__fDeJ7"
           disabled
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:rk:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rl:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDisabledAndChecked play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:rm:"
           class="Checkbox_input__fDeJ7"
           disabled
           type="checkbox"
           value
           checked
    >
    <label for="checkboxInputId-:rm:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rn:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDisabledAndRequired play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r11:"
           class="Checkbox_input__fDeJ7"
           disabled
           required
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:r11:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class="Checkbox_labelContent_required__OV2wb">
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r12:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithError play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:ru:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           aria-describedby="checkboxErrorId-:rv:"
           aria-invalid="true"
           value
    >
    <label for="checkboxInputId-:ru:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R Checkbox_labelCheckbox_error__TDi7U">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rv:"
         class
         aria-live="assertive"
    >
      <div class="ErrorMessage_errorMessage__508oW">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Du må lese og forstå innholdet for å gå videre
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithErrorAndRequired play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r13:"
           class="Checkbox_input__fDeJ7"
           required
           type="checkbox"
           aria-describedby="checkboxErrorId-:r14:"
           aria-invalid="true"
           value
    >
    <label for="checkboxInputId-:r13:"
           class="Checkbox_label__sEFOt Checkbox_label_error__JhYvM"
    >
      <span class="Checkbox_labelCheckbox__TIE0R Checkbox_labelCheckbox_error__TDi7U">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class="Checkbox_labelContent_required__OV2wb">
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r14:"
         class
         aria-live="assertive"
    >
      <div class="ErrorMessage_errorMessage__508oW">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Feilmelding
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r1g:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:r1g:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox har blitt klikket på
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1h:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:rg:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:rg:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz Checkbox_srOnly__nxK8+">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rh:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:rc:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:rc:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Får ekstra lang reisevei til jobb på grunn av levering til barnehage eller skolefritidsordning eller annen fritidsordning
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rd:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:re:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:re:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Fårekstrareiseveitiljobbpågrunnavleveringtilbarnehageellerskolefritidsordning
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rf:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithName play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r1e:"
           class="Checkbox_input__fDeJ7"
           name="test_name_checkbox"
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:r1e:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1f:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r0:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
           name="dummyNameForwardedFromRef"
    >
    <label for="checkboxInputId-:r0:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:ro:"
           class="Checkbox_input__fDeJ7"
           required
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:ro:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rp:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithRequiredAndChecked play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:rs:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value
           checked
    >
    <label for="checkboxInputId-:rs:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rt:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithRequiredAndMark play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:rq:"
           class="Checkbox_input__fDeJ7"
           required
           type="checkbox"
           value
    >
    <label for="checkboxInputId-:rq:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class="Checkbox_labelContent_required__OV2wb">
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rr:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithValue play-test 1`] = `
<div data-test-block="true">
  <div class="Checkbox_container__xhXb4  ">
    <input id="checkboxInputId-:r1a:"
           class="Checkbox_input__fDeJ7"
           type="checkbox"
           value="test_value_checkbox"
    >
    <label for="checkboxInputId-:r1a:"
           class="Checkbox_label__sEFOt "
    >
      <span class="Checkbox_labelCheckbox__TIE0R ">
        <span class="Checkbox_labelCheckboxCheck__x9xdZ">
        </span>
      </span>
      <span class="Checkbox_labelContent__Nf+Nz ">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1b:"
         class
         aria-live="assertive"
    >
    </div>
  </div>
</div>
`;
